--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=none
-spring.data.rest.baseUri=/api
+spring.data.rest.base-path=/api
+#server.port=8081
