--- a/build.gradle
+++ b/build.gradle
@@ -47,8 +47,9 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-data-rest")
     compile("org.springframework.boot:spring-boot-starter-security")
     
-    
     testCompile("org.springframework.boot:spring-boot-starter-test")
+    testCompile("com.jayway.jsonpath:json-path")
+    testCompile("com.jayway.jsonpath:json-path-assert")
 }
 
 bootRepackage {
