cobertura added (code coverage reporting)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.data.rest.base-path=/api
 #spring.datasource.username=sa
 #spring.datasource.password=
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+#We need this so that cobertura tests can run:
+spring.datasource.continueOnError=true
