--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
 
 apply plugin: 'java'
 apply plugin: 'spring-boot'
+apply from: 'cobertura.gradle'
 //apply plugin: 'war'
 
 //war {
