--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ buildscript {
 
 apply plugin: 'java'
 apply plugin: 'spring-boot'
-apply from: 'cobertura.gradle'
+//apply from: 'cobertura.gradle'
 //apply plugin: 'war'
 
 //war {
@@ -47,6 +47,8 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile("org.springframework.boot:spring-boot-starter-data-rest")
     compile("org.springframework.boot:spring-boot-starter-security")
+    
+    
     
     testCompile("org.springframework.boot:spring-boot-starter-test")
     testCompile("com.jayway.jsonpath:json-path")
