--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ buildscript {
 
 apply plugin: 'java'
 apply plugin: 'spring-boot'
-//apply from: 'cobertura.gradle'
+apply from: 'cobertura.gradle'
 //apply plugin: 'war'
 
 //war {
@@ -47,12 +47,13 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile("org.springframework.boot:spring-boot-starter-data-rest")
     compile("org.springframework.boot:spring-boot-starter-security")
-    
+	compile("org.springframework.boot:spring-boot-starter-tomcat")
     
     
     testCompile("org.springframework.boot:spring-boot-starter-test")
     testCompile("com.jayway.jsonpath:json-path")
     testCompile("com.jayway.jsonpath:json-path-assert")
+	testCompile("org.springframework.security:spring-security-test")
 }
 
 bootRepackage {
