--- a/cobertura.gradle
+++ b/cobertura.gradle
@@ -5,7 +5,7 @@ configurations{
 }
 
 dependencies {
-  coberturaRuntime 'org.mortbay.jetty:servlet-api:3.0.20100224'
+//  coberturaRuntime 'org.mortbay.jetty:servlet-api:3.0.20100224'
   coberturaRuntime 'net.sourceforge.cobertura:cobertura:2.1.1'  
 }
 
@@ -16,9 +16,9 @@ def classesCopy="${classes}-copy"
 
 task cobertura(type: Test){
   dependencies {
-    testRuntime 'org.mortbay.jetty:servlet-api:3.0.20100224'
+//    testRuntime 'org.mortbay.jetty:servlet-api:3.0.20100224'
     testRuntime 'net.sourceforge.cobertura:cobertura:2.1.1'
-    testRuntime 'org.mortbay.jetty:servlet-api:3.0.20100224'
+//    testRuntime 'org.mortbay.jetty:servlet-api:3.0.20100224'
   }
 
   systemProperty "net.sourceforge.cobertura.datafile", serFile
