--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'spring-boot'
 apply from: 'cobertura.gradle'
+apply plugin: "jacoco"
 //apply plugin: 'war'
 
 //war {
