--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'spring-boot'
 apply from: 'cobertura.gradle'
-apply plugin: "jacoco"
+//apply plugin: "jacoco"
 //apply plugin: 'war'
 
 //war {
