Code improvements, filter configurable now.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.data.rest.base-path=/api
 
 #We need this so that cobertura tests can run:
 spring.datasource.continueOnError=true
+
+
+#Application specific properties
+savet7.useSlowFilter=false
