--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,7 +8,8 @@ sonar.projectVersion=0.0.1
 # Since SonarQube 4.2, this property is optional if sonar.modules is set. 
 # If not set, SonarQube starts looking for source code from the directory containing 
 # the sonar-project.properties file.
-sonar.sources=src/main/java
+sonar.sources=src/main/java,src/main/resources/public/js/**.js
+ sonar.exclusions=src/main/resources/public/js/lib/**.js
  
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
