guess what? sonar convig :)

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,7 +9,7 @@ sonar.projectVersion=0.0.1
 # If not set, SonarQube starts looking for source code from the directory containing 
 # the sonar-project.properties file.
 sonar.sources=src/main/java,src/main/resources/public/js/
-sonar.exclusions=src/main/resources/public/js/lib/
+sonar.exclusions=src/main/resources/public/js/lib/*.js
  
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
