--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "karma-chrome-launcher": "^0.2.2",
     "karma-coverage": "^0.5.3",
     "karma-jasmine": "^0.3.6",
+    "karma-jasmine-matchers": "^2.0.0-beta2",
     "karma-junit-reporter": "^0.3.8",
     "karma-ng-html2js-preprocessor": "^0.2.0",
     "karma-phantomjs-launcher": "^0.2.3",
