--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,3 +13,6 @@ sonar.exclusions=src/main/resources/public/js/lib/*.js
  
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
+
+Comma-separated paths to directories containing tests.
+sonar.tests=src/test/java,src/test/js
