--- a/package.json
+++ b/package.json
@@ -7,8 +7,19 @@
     "url": "https://github.com/ivanarandjelovic/savet7.git"
   },
   "devDependencies": {
+    "babel-plugin-transform-react-jsx": "^6.4.0",
+    "babel-preset-es2015": "^6.3.13",
+    "babelify": "^7.2.0",
+    "bootstrap": "^3.3.6",
+    "browserify": "^13.0.0",
+    "font-awesome": "^4.5.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-eslint": "^1.1.1",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.1",
     "jasmine-core": "^2.4.1",
     "jasmine-reporters": "^2.1.1",
+    "jquery": "^2.2.0",
     "karma": "^0.13.19",
     "karma-chrome-launcher": "^0.2.2",
     "karma-coverage": "^0.5.3",
@@ -18,6 +29,14 @@
     "karma-ng-html2js-preprocessor": "^0.2.0",
     "karma-phantomjs-launcher": "^0.2.3",
     "phantomjs": "^1.9.19",
-    "protractor-jasmine2-html-reporter": "0.0.5"
+    "protractor-jasmine2-html-reporter": "0.0.5",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "react-router": "^2.0.0-rc5",
+    "redux": "^3.1.2",
+    "toastr": "^2.1.2",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0"
   }
 }
