--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "browserify": "^13.0.0",
     "font-awesome": "^4.5.0",
     "gulp-concat": "^2.6.0",
+    "gulp-connect": "^2.3.1",
     "gulp-eslint": "^1.1.1",
+    "gulp-open": "^1.0.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
     "jasmine-core": "^2.4.1",
