--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "protractor-jasmine2-html-reporter": "0.0.5",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-redux": "^4.1.2",
     "react-router": "^2.0.0-rc5",
     "redux": "^3.1.2",
     "toastr": "^2.1.2",
