--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^3.3.6",
     "browserify": "^13.0.0",
     "font-awesome": "^4.5.0",
+    "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.3.1",
     "gulp-eslint": "^1.1.1",
