--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "react-redux": "^4.1.2",
     "react-router": "^2.0.0-rc5",
     "redux": "^3.1.2",
+    "redux-logger": "^2.4.0",
+    "redux-thunk": "^1.0.3",
     "toastr": "^2.1.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
