--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,7 @@ spring.datasource.continueOnError=true
 #Application specific properties
 savet7.useSlowFilter=false
 savet7.allowCORS=true
+
+#No caching, for development is OK
+spring.resources.cache-period=0
+spring.resources.chain.cache=false
