--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "phantomjs": "^1.9.19",
     "protractor-jasmine2-html-reporter": "0.0.5",
     "react": "^0.14.7",
+    "react-addons-linked-state-mixin": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-modal": "^0.6.1",
     "react-redux": "^4.1.2",
