--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babelify": "^7.2.0",
     "bootstrap": "^3.3.6",
     "browserify": "^13.0.0",
+    "counterpart": "^0.17.1",
     "font-awesome": "^4.5.0",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
