CORS works, now to fix data loading logic (after login)

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,7 @@
 #Application specific properties
 savet7.useSlowFilter=false
 savet7.allowCORS=true
+savet7.allowCORSOrigin=http://localhost:8081
 
 #No caching, for development is OK
 spring.resources.cache-period=0
