--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "karma-phantomjs-launcher": "^0.2.3",
     "phantomjs": "^1.9.19",
     "protractor-jasmine2-html-reporter": "0.0.5",
+    "pubsub-js": "^1.5.3",
     "react": "^0.14.7",
     "react-addons-linked-state-mixin": "^0.14.7",
     "react-dom": "^0.14.7",
