--- a/package.json
+++ b/package.json
@@ -6,7 +6,35 @@
     "type": "git",
     "url": "https://github.com/ivanarandjelovic/savet7.git"
   },
+  "scripts": {
+    "test": "jest"
+  },
+  "jest": {
+    "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
+    "unmockedModulePathPatterns": [
+      "<rootDir>/node_modules/react",
+      "<rootDir>/node_modules/react-dom",
+      "<rootDir>/node_modules/react-addons-test-utils",
+      "<rootDir>/node_modules/fbjs"
+    ],
+    "collectCoverage": true,
+    "collectCoverageOnlyFrom": {
+      "src/main/resources/dev_public/js/actions/appActions.js": true,
+      "src/main/resources/dev_public/js/actions/loginActions.js": true,
+      "src/main/resources/dev_public/js/actions/buildingActions.js": true
+    },
+    "moduleFileExtensions": [
+      "js",
+      "jsx"
+    ],
+    "testDirectoryName": "js",
+    "testPathDirs": [
+      "src/test/js"
+    ],
+    "testRunner": "<rootDir>/node_modules/jest-cli/src/testRunners/jasmine/jasmine2.js"
+  },
   "devDependencies": {
+    "babel-jest": "^6.0.1",
     "babel-plugin-transform-react-jsx": "^6.4.0",
     "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
