--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "gulp-uglify": "^1.5.1",
     "jasmine-core": "^2.4.1",
     "jasmine-reporters": "^2.1.1",
+    "jest-cli": "^0.8.2",
     "jquery": "^2.2.0",
     "karma": "^0.13.19",
     "karma-chrome-launcher": "^0.2.2",
