--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,14 +3,14 @@ sonar.projectKey=savet7:project
 # this is the name displayed in the SonarQube UI
 sonar.projectName=Savet7
 sonar.projectVersion=0.0.3
- 
+
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-# Since SonarQube 4.2, this property is optional if sonar.modules is set. 
-# If not set, SonarQube starts looking for source code from the directory containing 
+# Since SonarQube 4.2, this property is optional if sonar.modules is set.
+# If not set, SonarQube starts looking for source code from the directory containing
 # the sonar-project.properties file.
-sonar.sources=src/main/java,src/main/resources/public/js/
-sonar.exclusions=src/main/resources/public/js/lib/*.js
- 
+sonar.sources=src/main/java,src/main/resources/dev_public/js/
+#sonar.exclusions=src/main/resources/public/js/lib/*.js
+
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
 
