So, finally, fixed issue with mocking
It seems that using test folder path breaks mocking in jest
but using require.requireActual works in that case. And using
"testPathDirs" is really required, since without it takes
ages to start tests.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "jest": {
+    "testFileExtensions": ["js"],
     "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
     "unmockedModulePathPatterns": [
       "<rootDir>/node_modules/react",
